# verdant

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_projects.sql  003_message_parent.sql  004_personas.sql  005_object_store.sql  006_project_file_inclusion.sql  007_project_file_summary.sql  008_graph_category_migration.sql  009_tool_calls.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: export.rs  graph.rs  memories.rs  messages.rs  mod.rs  objects.rs  personas.rs  project_files.rs  projects.rs  providers.rs  sessions.rs  settings.rs
src-tauri/src/tools/: mod.rs  search.rs
src/components/canvas/: CanvasPanel.tsx
src/components/chat/: ActionMenu.tsx  AssistantMessageGroup.tsx  AttachmentThumbnail.tsx  ChatInput.tsx  ContextIndicator.tsx  MessageBubbles.tsx  ModelSelector.tsx  ToolSelector.tsx
src/components/graph/: KnowledgeGraphNode.tsx  (+1 more)
src/hooks/: useModels.ts
src/pages/: ChatPage.tsx  KnowledgeGraphPage.tsx  MemoriesPage.tsx  ModelsPage.tsx  ProjectWorkspacePage.tsx  ProjectsPage.tsx  SessionsPage.tsx  SettingsPage.tsx
src/providers/: ollama.ts  registry.ts
src/services/: graphExtraction.ts  sessionContext.ts  toolExecution.ts
src/stores/: canvasStore.ts  confirmStore.ts  graphStore.ts  memoryStore.ts  messageStore.ts  personaStore.ts  projectStore.ts  providerStore.ts  sessionStore.ts  settingsStore.ts  uiStore.ts
src/types/: index.ts
src/utils/: index.ts  layout.ts
(+14 files in other folders)
