[package]
name = "verdant"
version = "0.1.0"
description = "Verdant — A local-first AI workspace"
authors = ["Verdant"]
edition = "2021"

[lib]
name = "verdant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.19"
urlencoding = "2"
